update styles @RegisterForm and @SearchForm - work in progress

--- a/src/components/Header/LoginNav/LoginNav.scss
+++ b/src/components/Header/LoginNav/LoginNav.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .login-nav {
   line-height: 2.5rem;
   overflow: hidden;
@@ -5,8 +7,8 @@
   transition: max-height 250ms ease-in;
 
   &__link {
-    font-size: 0.8em;
-    font-weight: 800;
+    font-size: var(--step--1);
+    font-weight: 700;
     color: var(--primary-gray);
     padding: 0.5rem;
 
@@ -14,19 +16,9 @@
       color: var(--primary-white);
     }
 
-    @media (max-width: 900px) {
-      & {
-        font-size: 0.875em;
-        text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
-        font-weight: 700;
-        letter-spacing: 2px;
-        line-height: 1rem;
-      }
-    }
-
     &--separator {
-      font-size: 0.8em;
-      font-weight: 800;
+      font-size: var(--step--1);
+      font-weight: 700;
       color: var(--primary-gray);
       padding: 0.5rem;
     }
