--- a/src/components/LandingAnimation/LandingAnimation.scss
+++ b/src/components/LandingAnimation/LandingAnimation.scss
@@ -117,7 +117,7 @@
 
 .byline {
   color: var(--primary-white);
-  font-size: 1rem;
+  font-size: var(--step-0);
   left: -2em;
   right: -2em;
   text-align: center;
@@ -132,7 +132,7 @@
     height: 11rem;
     width: 24rem;
     h2 {
-      font-size: 1.25rem;
+      font-size: var(--step-1);
     }
     .byline {
       top: 115%;
@@ -145,7 +145,7 @@
     height: 10.3rem;
     width: 22rem;
     h2 {
-      font-size: 1rem;
+      font-size: var(--step-0);
     }
     .byline {
       top: 125%;
@@ -165,7 +165,7 @@
     height: 8.75rem;
     width: 19rem;
     h2 {
-      font-size: 1.05rem;
+      font-size: var(--step-0);
     }
   }
 }
@@ -175,47 +175,27 @@
     height: 8rem;
     width: 17.5rem;
     h2 {
-      font-size: 1rem;
+      font-size: var(--step-0);
     }
   }
 }
-
-// @media (max-width: 900px) and (orientation: landscape) {
-//   .starwars-demo {
-//     height: 4rem;
-//     width: 10rem;
-//   }
-//   .byline {
-//     top: 150%;
-//   }
-// }
-
-// @media (max-width: 500px) and (orientation: portrait) {
-//   .starwars-demo {
-//     height: 7.5rem;
-//     width: 16.5rem;
-//   }
-// }
 
 @media (max-width: 400px) {
   .starwars-demo {
     height: 5.5rem;
     width: 13rem;
-    h2 {
-      font-size: 0.75rem;
-    }
     .byline {
       top: 135%;
     }
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 380px) {
   .starwars-demo {
     height: 3.5rem;
     width: 8.5rem;
     h2 {
-      font-size: 0.6rem;
+      font-size: var(--step--2);
     }
     .byline {
       top: 150%;
