--- a/src/components/ListOfItems/ListOfItems.scss
+++ b/src/components/ListOfItems/ListOfItems.scss
@@ -1,7 +1,7 @@
 .list-item {
   color: var(--primary-pink);
   margin-block: 0.5rem;
-  font-size: 0.75rem;
+  font-size: var(--step--2);
 
   &:hover {
     filter: brightness(150%);
