--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,10 +2,20 @@ $primary-gray: rgb(181, 183, 183);
 $secondary-gray: #48494a;
 $gray-blue: #6f7380;
 $primary-pink: #9e4f60;
-$primary-white: #ffffff;
+$primary-white: #f8f9fa;
+$primary-blue: #3f6dac;
 $light-saber: #03e9f4;
-// $bg-dark-gray: #212529;
-$bg-dark-gray: #1d1e1f;
+$bg-dark-gray: #181818;
+$bg-form-overlay: rgba(255, 255, 255, 0.7);
+
+$step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.80rem);
+$step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1.00rem);
+$step-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+$step-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
+$step-2: clamp(1.62rem, calc(1.50rem + 0.58vw), 1.95rem);
+$step-3: clamp(1.94rem, calc(1.77rem + 0.87vw), 2.44rem);
+$step-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
+$step-5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem);
 
 :root {
   --primary-gray: #{$primary-gray};
@@ -13,7 +23,18 @@ $bg-dark-gray: #1d1e1f;
   --gray-blue: #{$gray-blue};
   --primary-pink: #{$primary-pink};
   --primary-white: #{$primary-white};
+  --primary-blue: #{$primary-blue};
   --light-saber: #{$light-saber};
   --box-shadow-pink: 231, 203, 209;
   --bg-dark-gray: #{$bg-dark-gray};
+  --bg-form-overlay: #{$bg-form-overlay};
+
+  --step--2: #{$step--2};
+  --step--1: #{$step--1};
+  --step-0: #{$step-0};
+  --step-1: #{$step-1};
+  --step-2: #{$step-2};
+  --step-3: #{$step-3};
+  --step-4: #{$step-4};
+  --step-5: #{$step-5};
 }
