--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $gray-blue: #6f7380;
 $primary-pink: #9e4f60;
 $primary-white: #f8f9fa;
 $primary-blue: #3f6dac;
+$primary-yellow: #edd700;
 $light-saber: #03e9f4;
 $bg-dark-gray: #181818;
 $bg-form-overlay: rgba(255, 255, 255, 0.7);
@@ -24,6 +25,7 @@ $step-5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem);
   --primary-pink: #{$primary-pink};
   --primary-white: #{$primary-white};
   --primary-blue: #{$primary-blue};
+  --primary-yellow: #{$primary-yellow};
   --light-saber: #{$light-saber};
   --box-shadow-pink: 231, 203, 209;
   --bg-dark-gray: #{$bg-dark-gray};
