--- a/src/pages/RegisterForm.scss
+++ b/src/pages/RegisterForm.scss
@@ -1,5 +1,3 @@
-// @import "../styles/variables.scss";
-
 .register-form {
   position: fixed;
   top: 0;
@@ -51,10 +49,10 @@
     letter-spacing: 0.06em;
     width: calc(min(540px, 85vw));
     font-size: var(--step--1);
-    color: #edd700;
+    color: var(--primary-yellow);
 
     input {
-      letter-spacing: 0.06rem;
+      // letter-spacing: 0.06rem;
       width: 90%;
       padding: 0.7rem;
       border-radius: 5px;
@@ -62,9 +60,9 @@
       outline: none;
 
       &:focus {
-        outline: 2px solid #edd700;
-        background-color: #484848;
-        color: #edd700;
+        outline: 2px solid var(--primary-yellow);
+        background-color: var(--secondary-gray);
+        color: var(--primary-yellow);
       }
     }
 
@@ -72,17 +70,17 @@
       display: block;
       width: 90%;
       margin: 1.3rem auto;
-      padding: 0.6rem;
+      // padding: 0.6rem;
       border: none;
       border-radius: 5px;
       font-weight: 500;
-      font-size: 0.875rem;
-      background-color: #484848;
-      color: white;
+      font-size: var(--step--1);
+      background-color: var(--secondary-gray);
+      color: var(--primary-white);
       transition: background-color 175ms;
 
       &:hover {
-        background-color: #3f6dac;
+        background-color: var(--primary-blue);
       }
     }
 
@@ -108,7 +106,7 @@
     transition: outline 225ms;
   
     &:hover {
-      outline: solid 1px #edd700;
+      outline: solid 1px var(--primary-yellow);
     }
   }
   &__signin-link {
@@ -136,7 +134,7 @@
       height: 100%;
 
       &__signin-link {
-        font-size: 12px;
+        font-size: var(--step--2);
       }
     }
 
