--- a/src/components/GridItems/GridItems.scss
+++ b/src/components/GridItems/GridItems.scss
@@ -51,6 +51,7 @@
     font-size: var(--step-1);
     color: var(--primary-white);
     transition: color 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    margin-block: 0.25rem;
     
     &:hover {
       cursor: pointer;
