--- a/src/pages/RegisterForm.scss
+++ b/src/pages/RegisterForm.scss
@@ -99,7 +99,7 @@
   &__signup-link {
     width: 90%;
     margin: 0 auto;
-    margin-top: 1rem;
+    margin-block: 1rem;
     padding: 0.5rem;
     border: 0;
     border-radius: 5px;
