--- a/src/components/Header/SearchButton/SearchIcon.scss
+++ b/src/components/Header/SearchButton/SearchIcon.scss
@@ -5,10 +5,9 @@
   height: 35px;
   width: 45px;
   border-radius: 0.375rem;
-  // &:hover {
-  //   background-color: lighten(white, 90%);
-  //   // opacity: 50%;
-  // }
+  img {
+    margin-inline-start: 2.5px;
+  }
 
   @media (min-width: 768px) {
     & {
