--- a/src/components/SearchModal/SearchModal.scss
+++ b/src/components/SearchModal/SearchModal.scss
@@ -40,6 +40,13 @@ input[name="searchInput"] {
   border: none;
   letter-spacing: 0.4px;
 }
+input[name="radio-stacked"] {
+  margin-block-start: 0.1rem;
+  &:checked {
+    background-color: var(--primary-blue);
+    border-color: var(--primary-blue);
+  }
+}
 
 input[name="searchInput"]:is(:focus, :focus-visible) {
   outline: 2px solid var(--primary-yellow);
