--- a/src/components/GridItems/GridItems.scss
+++ b/src/components/GridItems/GridItems.scss
@@ -8,6 +8,7 @@
   grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
   grid-auto-rows: minmax(275px, 30vh);
   gap: 1.8rem;
+  min-height: 80vh;
 }
 
 .grid-item {
