--- a/src/components/BackToTopBtn/BackToTopBtn.scss
+++ b/src/components/BackToTopBtn/BackToTopBtn.scss
@@ -1,10 +1,12 @@
+@import "../../styles/variables.scss";
+
 .back-to-top-btn {
   display: inline-block;
-  background-color: #FF9800;
+  background-color: var(--primary-white);
   width: 50px;
   height: 50px;
   text-align: center;
-  border-radius: 4px;
+  border-radius: 50%;
   position: fixed;
   bottom: 30px;
   right: 30px;
@@ -13,16 +15,9 @@
   opacity: 0;
   visibility: hidden;
   z-index: 1000;
+  border: none;
 }
-.back-to-top-btn::after {
-  content: "\f077";
-  font-family: FontAwesome;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 2em;
-  line-height: 50px;
-  color: #fff;
-}
+
 .back-to-top-btn:hover {
   cursor: pointer;
   background-color: #333;
@@ -41,3 +36,13 @@
   }
 }
 
+
+
+.back-to-top-btn__img {
+  width: 52px;
+  height: 52px;
+  position: relative;
+  top:50%;
+  right: 50%;
+  transform: translate(47%, -50%);
+}
