--- a/src/components/Header/SearchButton/SearchIcon.scss
+++ b/src/components/Header/SearchButton/SearchIcon.scss
@@ -5,6 +5,9 @@
   height: 35px;
   width: 45px;
   border-radius: 0.375rem;
+  &:hover {
+    cursor: pointer;
+  }
   img {
     margin-inline-start: 2.5px;
   }
