--- a/src/pages/RegisterForm.scss
+++ b/src/pages/RegisterForm.scss
@@ -70,7 +70,6 @@
       display: block;
       width: 90%;
       margin: 1.3rem auto;
-      // padding: 0.6rem;
       border: none;
       border-radius: 5px;
       font-weight: 500;
@@ -80,6 +79,7 @@
       transition: background-color 175ms;
 
       &:hover {
+        cursor: pointer;
         background-color: var(--primary-blue);
       }
     }
