--- a/src/components/SearchForm.scss
+++ b/src/components/SearchForm.scss
@@ -24,30 +24,37 @@
     display: flex;
     fieldset {
       min-width: 0;
-      // padding: 0;
       margin: 0;
-      border: 0;
       padding: 0.7rem;
       padding-inline-start: 1.5rem;
       padding-block-end: 0.5rem;
       border-radius: 5px;
       border: none;
       outline: none;
-      margin-block: 1rem;
-      margin: 0;
+    }
+    @media (max-width: 596px) {
+      width: 100%;
     }
   }
   &__radio-input-wrapper {
     display: inline-block;
     margin-inline-end: 0.375rem;
+    input {
+      @media (max-width: 596px) {
+        display: table-cell;
+        vertical-align: middle
+      }
+
+    }
   }
-  &__check-input {
-    display: inline-block;
-  }
+
   &__label {
     display: inline-block;
     font-size: var(--step--1);
     margin-inline-end: 0.75rem;
+    @media (max-width: 596px) {
+      font-size: var(--step--2);
+    }
   }
 
   &__input-field{
