--- a/src/components/Header/LoginNav/LoginNav.scss
+++ b/src/components/Header/LoginNav/LoginNav.scss
@@ -4,7 +4,11 @@
   line-height: 2.5rem;
   overflow: hidden;
   white-space: nowrap;
-  transition: max-height 250ms ease-in;
+  // transition: max-height, padding padding 250ms ease-in;
+  transition-property: max-height, padding;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in;
+  // padding: 0.5rem;
 
   &__link {
     font-size: var(--step--1);
@@ -17,10 +21,11 @@
     }
 
     &--separator {
-      font-size: var(--step--1);
+      font-size: var(--step--2);
       font-weight: 700;
       color: var(--primary-gray);
-      padding: 0.5rem;
+      // padding: 0.5rem;
+      line-height: initial;
     }
   }
 
@@ -36,7 +41,9 @@
     }
 
     &.collapsed.show {
-      max-height: 122px;
+      max-height: 116px;
+      padding-block-start: 0.75rem;
+      // margin-block-end: -16px;
     }
 
     &.collapsed.show.loggedin {
