--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $primary-yellow: #edd700;
 $light-saber: #03e9f4;
 $bg-dark-gray: #181818;
 $bg-form-overlay: rgba(255, 255, 255, 0.7);
+$primary-card-shadow: 0px 0px 9px 2px rgba(231, 203, 209, 0.45);
 
 $step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.80rem);
 $step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1.00rem);
@@ -39,4 +40,6 @@ $step-5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem);
   --step-3: #{$step-3};
   --step-4: #{$step-4};
   --step-5: #{$step-5};
+
+  --primary-card-shadow: #{$primary-card-shadow};
 }
