Refactor:  Reuse Modal to avoid duplicated code

--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -12,7 +12,7 @@
   place-content: center;
  
   &-content {
-    width: calc(min(500px, 85vw));
+    // width: calc(min(500px, 85vw));
     position: relative;
     @media (max-width: 596px) {
       min-width: calc(100vw - 0.25rem);
