--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -1,4 +1,5 @@
 .search-form {
+  width: calc(min(500px, 85vw));
   padding-block-start: 1rem;
   display: flex;
   flex-direction: column;
@@ -9,6 +10,10 @@
   letter-spacing: 0.06em;
   font-size: var(--step--1);
   color: var(--primary-yellow);
+
+  @media (max-width: 596px) {
+    min-width: calc(100vw - 0.25rem);
+  }
 
 
   &__title {
