--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -10,15 +10,16 @@
 
 body {
   background-image: url("https://res.cloudinary.com/dn9mr6kwc/image/upload/v1666519655/Starwars%20miniproject/star-wars-background-img_cpqurg.jpg");
-  // font-family: "Orbitron", sans-serif;
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
-  letter-spacing: 1.20px;
-  min-height: 100vh;
+  letter-spacing: 0.12rem;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.35;
-  
+}
+
+#app {
+  min-height: 100vh;
 }
 
 a {
