Refactor: GridLayoutPage & useSearch

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -10,9 +10,11 @@
   justify-content: center;
   display: grid;
   place-content: center;
+  @media (max-width: 596px) {
+    display: initial;
+  }
  
   &-content {
-    // width: calc(min(500px, 85vw));
     position: relative;
     @media (max-width: 596px) {
       min-width: calc(100vw - 0.25rem);
