--- a/src/pages/DetailPage/DetailPage.scss
+++ b/src/pages/DetailPage/DetailPage.scss
@@ -1,11 +1,13 @@
 .detail-page {
+  max-height: calc(100vh - 132.83px);
+  max-height: 75vh;
   display: flex;
   margin-inline: auto;
   border-radius: 15px;
-  overflow: hidden;
   flex-direction: column;
-  margin-block: 1rem;
+  overflow: hidden;
   box-shadow: 0px 0px 9px 2px rgba(231, 203, 209, 0.45);
+
 
   .detail-page__img {
     display: grid;
@@ -28,13 +30,17 @@
     color: var(--primary-white);
     border-left: 3px solid var(--primary-pink);
     width: 50%;
-    flex-grow: 1;
+
+    
 
     &--row {
       display: flex;
       flex-wrap: wrap;
       margin-block: 0.5rem;
       padding-top: 0.25rem;
+      gap:0.5rem;
+      
+
         
         h3 {
           margin-block: 0.5rem;
@@ -100,6 +106,7 @@
   }
 
   @media (max-width: 575px) {
+    width: 100%;
     max-width: calc(min(94vw, 540px));
   }
 
@@ -113,6 +120,7 @@
       }
     }
   }
+
 
   @media (min-width: 576px) {
     max-width: calc(min(90vw, 758px));
@@ -128,9 +136,9 @@
 
     .detail-page__img {
       width: 100%;
-      &:has(img[src*=Planets]) {
-        margin-block: 0.5rem;
-      }
+      // &:has(img[src*=Planets]) {
+      //   margin-block: 0.5rem;
+      // }
     }
 
     :is(img[src*="Yavin4"], img[src*="Bestine"], img[src*="Dantooine"]){
