--- a/src/pages/DetailPage/DetailPage.scss
+++ b/src/pages/DetailPage/DetailPage.scss
@@ -9,6 +9,39 @@
   box-shadow: 0px 0px 9px 2px rgba(231, 203, 209, 0.45);
 
 
+  &.expand {
+    max-height: initial;
+    --min-height: 0;
+    @media (max-width: 768px) {
+      & {
+        margin-block-end: 1rem;
+      } 
+    }
+    &::after {
+      display: none;
+    }
+  }
+  &::after {
+    content: "";
+    position: sticky;
+    min-height: var(--min-height, 0);
+    width: 100%;
+    //avoid some overlaping on small pages
+    bottom: -1%;
+    pointer-events: none;
+    background: linear-gradient(to bottom,
+        transparent,
+        var(--bg-dark-gray) 50%);
+        @media (min-width: 568px) {
+          & {
+            display: none;
+          }
+        }
+
+  
+  }
+
+
   .detail-page__img {
     display: grid;
     width: 50%;
@@ -177,6 +210,9 @@
 @media (min-width: 700px) {
   .detail-page {
     flex-direction: row;
+    &::after {
+      display: none;
+    }
 
     &:has(img[src*="Starships"], img[src*="Planets"]) {
       .detail-page__info {
