--- a/src/pages/DetailPage/DetailPage.scss
+++ b/src/pages/DetailPage/DetailPage.scss
@@ -8,19 +8,27 @@
   overflow: hidden;
   box-shadow: 0px 0px 9px 2px rgba(231, 203, 209, 0.45);
 
-
   &.expand {
     max-height: initial;
     --min-height: 0;
+
     @media (max-width: 768px) {
       & {
         margin-block-end: 1rem;
-      } 
+      }
     }
+
+    //don't show the blurred effect if the main lement is expanded
     &::after {
       display: none;
     }
+    // if main element is expanded don't show the
+    .view-more-btn {
+      display: none;
+    }
   }
+
+  // blurred effect on last line
   &::after {
     content: "";
     position: sticky;
@@ -29,18 +37,18 @@
     //avoid some overlaping on small pages
     bottom: -1%;
     pointer-events: none;
-    background: linear-gradient(to bottom,
-        transparent,
-        var(--bg-dark-gray) 50%);
-        @media (min-width: 568px) {
-          & {
-            display: none;
-          }
-        }
+    background: linear-gradient(
+      to bottom,
+      transparent,
+      var(--bg-dark-gray) 50%
+    );
 
-  
+    @media (min-width: 568px) {
+      & {
+        display: none;
+      }
+    }
   }
-
 
   .detail-page__img {
     display: grid;
@@ -51,7 +59,6 @@
     &:has(img[src*="Planets"]) {
       place-content: center;
     }
-   
   }
 
   .detail-page__info {
@@ -64,39 +71,34 @@
     border-left: 3px solid var(--primary-pink);
     width: 50%;
 
-    
-
     &--row {
       display: flex;
       flex-wrap: wrap;
       margin-block: 0.5rem;
       padding-top: 0.25rem;
-      gap:0.5rem;
-      
+      gap: 0.5rem;
 
-        
-        h3 {
-          margin-block: 0.5rem;
+      h3 {
+        margin-block: 0.5rem;
+      }
+
+      & > * {
+        flex: 1 0;
+        width: 100%;
+        max-width: 100%;
+      }
+
+      @media (max-width: 575px) {
+        & {
+          padding: 0;
+          margin: 0;
         }
-        
-        &>* {
-          flex: 1 0;
-          width: 100%;
-          max-width: 100%;
+
+        & > * {
+          margin-inline-end: 1rem;
         }
-        
-        @media (max-width: 575px) {
-          & {
-            padding: 0;
-            margin: 0;
-          }
-          & > * {
-              margin-inline-end: 1rem;
-          }
-          
       }
     }
-
 
     h1 {
       font-size: var(--step-1);
@@ -112,10 +114,11 @@
       color: var(--primary-gray);
     }
 
-    .loadingio-spinner-eclipse-3z3n0w49pdf { 
+    .loadingio-spinner-eclipse-3z3n0w49pdf {
       width: 120px;
       height: 120px;
     }
+
     @media (max-width: 575px) {
       padding-block: 0.6rem;
     }
@@ -154,7 +157,6 @@
     }
   }
 
-
   @media (min-width: 576px) {
     max-width: calc(min(90vw, 758px));
     min-height: calc(min(65vh, 500px));
@@ -174,17 +176,20 @@
       // }
     }
 
-    :is(img[src*="Yavin4"], img[src*="Bestine"], img[src*="Dantooine"]){
+    :is(img[src*="Yavin4"], img[src*="Bestine"], img[src*="Dantooine"]) {
       clip-path: circle(88px);
     }
+
     img[src*="Mygeeto"] {
       max-height: 30vh;
       clip-path: circle(90px);
     }
+
     img[src*="Saleucami"] {
       clip-path: circle(73px);
     }
   }
+
   @media (min-width: 700px) {
     img[src*="Planets"] {
       max-height: calc(max(25vh, 300px));
@@ -210,6 +215,7 @@
 @media (min-width: 700px) {
   .detail-page {
     flex-direction: row;
+
     &::after {
       display: none;
     }
