--- a/src/components/ListOfItemsWrapper/ListOfItemsWrapper.scss
+++ b/src/components/ListOfItemsWrapper/ListOfItemsWrapper.scss
@@ -2,14 +2,8 @@
   line-height: 1.5;
   overflow: hidden;
 
-  h3 {
-    margin-block: 0.5rem;
-  }
-
-  @media (max-width: 575px) {
-    & {
-      margin-inline-end: 0.5rem;
-    }
+  @media (max-width: 576px) {
+    margin-inline-end: 0.5rem;
   }
 }
 
@@ -25,8 +19,10 @@
   position: sticky;
   bottom: 3%;
   z-index: 10;
+  transition: color, border-color, 125ms ease-in-out;
 
-  &.hide {
+  // dont display the button on larger screens to avoid user poor user experience
+  @media (min-width: 576px) {
     display: none;
   }
 
