--- a/src/layouts/DetailPageLayout/DetailPageLayout.scss
+++ b/src/layouts/DetailPageLayout/DetailPageLayout.scss
@@ -1,11 +1,5 @@
-#app:has(> .detail-page-layout-container ) {
-  grid-template-rows: 100.83px 1fr;
+#app:has(> .detail-page-layout-container) {
+  flex-direction: column;
+  display: flex;
   gap: 1rem;
-  @media (min-width: 576px) {
-    grid-template-rows: 104.75px 1fr;
-  }
-  @media (min-width: 768px) {
-    grid-template-rows: 145.74px 1fr;
-  }
 }
-
