--- a/src/pages/GridLayoutPage/GridLayoutPage.scss
+++ b/src/pages/GridLayoutPage/GridLayoutPage.scss
@@ -1,9 +1,7 @@
-@import "../../styles/variables.scss";
-
-#app:has(> .grid-items ) {
+// changes layout when grid-items component is rendered
+#app:has(> .grid-items) {
   display: initial;
 }
-
 
 .grid-items {
   max-width: calc(min(92vw, 1200px));
@@ -13,6 +11,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(224px, 1fr));
   grid-auto-rows: minmax(275px, 30vh);
+  @media (min-width: 576px) and (orientation: portrait) {
+    grid-auto-rows: minmax(225px, 20vh);
+  }
   gap: 1.8rem;
   min-height: 80vh;
 }
@@ -59,19 +60,17 @@
     color: var(--primary-white);
     transition: color 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
     margin-block-end: 0.25rem;
-    
+
     &:hover {
       cursor: pointer;
       color: var(--primary-pink);
     }
   }
-  
+
   p {
     font-size: var(--step--1);
     color: var(--gray-blue);
   }
-
-
 }
 
 @media (max-width: 576px) {
