--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -23,10 +23,11 @@
     line-height: 1.5;
   }
 
-  
-  &__fieldset-wrapper{
+
+  &__fieldset-wrapper {
     width: 90%;
     display: flex;
+
     fieldset {
       min-width: 0;
       margin: 0;
@@ -37,13 +38,16 @@
       border: none;
       outline: none;
     }
+
     @media (max-width: 596px) {
       width: 100%;
     }
   }
+
   &__radio-input-wrapper {
     display: inline-block;
     margin-inline-end: 0.375rem;
+
     input {
       @media (max-width: 596px) {
         display: table-cell;
@@ -57,12 +61,13 @@
     display: inline-block;
     font-size: var(--step--1);
     margin-inline-end: 0.75rem;
+
     @media (max-width: 596px) {
       font-size: var(--step--2);
     }
   }
 
-  &__input-field{
+  &__input-field {
     width: 90%;
     padding: 0.7rem;
     border-radius: 5px;
@@ -70,6 +75,7 @@
     outline: none;
     margin-block: 1rem;
     margin-block-start: 0.25rem;
+
     &:focus {
       outline: 2px solid var(--primary-yellow);
       background-color: var(--secondary-gray);
@@ -77,6 +83,7 @@
     }
   }
 }
+
 .modal-section-wrapper {
   width: 100%;
   border-top: 1px solid var(--primary-white);
@@ -90,11 +97,12 @@ button[type='submit'] {
   border: none;
   outline: none;
 
-  &:focus {
+  &:active {
     outline: 2px solid var(--primary-yellow);
     background-color: var(--secondary-gray);
     color: var(--primary-yellow);
   }
+
   display: block;
   width: 90%;
   margin: 1.3rem auto;
