--- a/src/components/Header/SearchButton/SearchIcon.scss
+++ b/src/components/Header/SearchButton/SearchIcon.scss
@@ -5,11 +5,20 @@
   height: 35px;
   width: 45px;
   border-radius: 0.375rem;
+  transition: border-color 125ms ease-in-out, fill 125ms ease-in-out;
+
+  .search-icon-svg {
+    height: 100%;
+    margin: auto;
+  }
+
   &:hover {
     cursor: pointer;
-  }
-  img {
-    margin-inline-start: 2.5px;
+    border-color: var(--primary-white);
+
+    .search-icon-svg {
+      fill: var(--primary-white);
+    }
   }
 
   @media (min-width: 768px) {
