--- a/src/components/Header/ToggleLoginMenuBtn/ToggleLoginMenuBtn.scss
+++ b/src/components/Header/ToggleLoginMenuBtn/ToggleLoginMenuBtn.scss
@@ -8,10 +8,6 @@
   order: -1;
   transition: border-color 125ms ease-in-out, fill 125ms ease-in-out;
 
-  // &:hover {
-  //   cursor: pointer;
-  // }
-
   &:hover {
     cursor: pointer;
     border-color: var(--primary-white);
@@ -26,6 +22,7 @@
     width: 100%;
     height: 100%;
     margin: auto;
+    pointer-events: none;
   }
 
   @media (min-width: 768px) {
