Refactor ListOfItems component to use Link component

--- a/src/components/ListOfItems/ListOfItems.scss
+++ b/src/components/ListOfItems/ListOfItems.scss
@@ -2,7 +2,7 @@
   color: var(--primary-pink);
   margin-block: 0.5rem;
   font-size: var(--step--2);
-  // display: block;
+  display: block;
 
   &:hover {
     filter: brightness(150%);
