Fix DetailPage styles

--- a/src/components/ListOfItemsContainer/ListOfItemsWrapper.scss
+++ b/src/components/ListOfItemsContainer/ListOfItemsWrapper.scss
@@ -21,7 +21,7 @@
   z-index: 10;
   transition: color, border-color, 125ms ease-in-out;
 
-  // dont display the button on larger screens to avoid user poor user experience
+  // don't display the button on larger screens to avoid user poor user experience
   @media (min-width: 576px) {
     display: none;
   }
