--- a/src/components/SearchForm/SearchForm.scss
+++ b/src/components/SearchForm/SearchForm.scss
@@ -118,4 +118,12 @@ button[type='submit'] {
     cursor: pointer;
     background-color: var(--primary-blue);
   }
+
+  &:disabled {
+    opacity: 0.6;
+
+    &:hover {
+      cursor: not-allowed;
+    }
+  }
 }
