--- a/src/pages/RegisterForm.scss
+++ b/src/pages/RegisterForm.scss
@@ -38,7 +38,7 @@
       }
     }
 
-    input[type='submit'] {
+    button[type='submit'] {
       display: block;
       width: 90%;
       margin: 1.3rem auto;
@@ -53,6 +53,12 @@
       &:hover {
         cursor: pointer;
         background-color: var(--primary-blue);
+      }
+      &:disabled {
+        opacity: 0.6;
+        &:hover {
+          cursor: not-allowed;
+        }
       }
     }
 
